--- a/preamble.tex
+++ b/preamble.tex
@@ -58,10 +58,12 @@
 
 %Use Fira Math for Equations
 \usepackage{firamath-otf}
-\setmathfont{TeX Gyre DejaVu Math}[range={\vdots,\ddots, \setminus}] %Fallback for \vdots and \ddots
+\setmathfont{TeX Gyre DejaVu Math}[range={\vdots,\ddots}] %Fallback for \vdots and \ddots
 \setmathfont{Fira Math}[range=]
 %Fix Mathcal
 \DeclareMathAlphabet{\mathcal}{OMS}{cmbrs}{m}{n}
+%Fix setminus
+\renewcommand{\setminus}{\mathbin{\backslash}}
 
 \newcommand{\define}[1]{\textit{#1}\index{#1}}
 
