--- a/styling/kao.sty
+++ b/styling/kao.sty
@@ -12,7 +12,7 @@
 %----------------------------------------------------------------------------------------
 %	USEFUL PACKAGES AND COMMANDS
 %----------------------------------------------------------------------------------------
-
+\RequirePackage{zref-abspage}
 \RequirePackage{kvoptions} % Handle package options
 \RequirePackage{etoolbox} % Easy programming to modify TeX stuff
 \RequirePackage{calc} % Make calculations
@@ -1234,6 +1234,7 @@
 
 % kaobox
 \RequirePackage[most]{tcolorbox}
+
 
 % Define a new environment using the style created above
 \newtcolorbox{kaobox}[1][]{
