--- a/styling/kaorefs.sty
+++ b/styling/kaorefs.sty
@@ -239,3 +239,12 @@
 % Set the refname for subsections
 \crefname{subsection}{\subsectionname}{\subsectionnameplural}
 \Crefname{subsection}{\subsectionname}{\subsectionnameplural}
+
+% Fix referencing of custom Theorem environments
+\crefname{definitionT}{Definition}{Definitions}
+\crefname{theoremT}{Theorem}{Theorems}
+\crefname{claimT}{Claim}{Claims}
+\crefname{lemmaT}{Lemma}{Lemmas}
+\crefname{corollaryT}{Corollary}{Corollaries}
+\crefname{remarkT}{Remark}{Remarks}
+\crefname{propositionT}{Proposition}{Propositions}
