Start writing the introduction

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -50,10 +50,11 @@ Version Number: 1.0},
 	file = {Etessami et al. - 2020 - Tarski’s Theorem, Supermodular Games, and the Comp.pdf:/home/nils/Zotero/storage/DKKSJSLV/Etessami et al. - 2020 - Tarski’s Theorem, Supermodular Games, and the Comp.pdf:application/pdf},
 }
 
-@article{goos_further_nodate,
+@article{goos_further_2022,
 	title = {Further Collapses in {TFNP}},
 	abstract = {We show {EOPL} = {PLS} ∩ {PPAD}. Here the class {EOPL} consists of all total search problems that reduce to the End-of-Potential-Line problem, which was introduced in the works by Huba´ˇcek and Yogev ({SICOMP} 2020) and Fearnley et al. ({JCSS} 2020). In particular, our result yields a new simpler proof of the breakthrough collapse {CLS} = {PLS} ∩ {PPAD} by Fearnley et al. ({STOC} 2021). We also prove a companion result {SOPL} = {PLS} ∩ {PPADS}, where {SOPL} is the class associated with the Sink-of-Potential-Line problem.},
 	author = {Goos, Mika and Hollender, Alexandros and Jain, Siddhartha and Maystre, Gilbert and Pires, William and Robere, Robert and Tao, Ran},
+	date = {2022},
 	langid = {english},
 	file = {Goos et al. - Further Collapses in TFNP.pdf:/home/nils/Zotero/storage/KRDG4T2P/Goos et al. - Further Collapses in TFNP.pdf:application/pdf},
 }
@@ -400,4 +401,17 @@ Version Number: 1.0},
 	author = {Munkres, James Raymond},
 	date = {2018},
 	file = {Munkres - 2018 - Elements of algebraic topology.pdf:/home/nils/Zotero/storage/E6PXKAVQ/Munkres - 2018 - Elements of algebraic topology.pdf:application/pdf},
+}
+
+@misc{kaiser_criticality_2024,
+	title = {Criticality in Sperner's Lemma},
+	url = {http://arxiv.org/abs/2301.03420},
+	abstract = {We answer a question posed by T. Gallai in 1969 concerning criticality in Sperner's lemma, listed as Problem 9.14 in the collection of Jensen and Toft [Graph coloring problems, John Wiley \& Sons, Inc., New York, 1995]. Sperner's lemma states that if a labelling of the vertices of a triangulation of the \$d\$-simplex \${\textbackslash}Delta{\textasciicircum}d\$ with labels \$1, 2, {\textbackslash}ldots, d+1\$ has the property that (i) each vertex of \${\textbackslash}Delta{\textasciicircum}d\$ receives a distinct label, and (ii) any vertex lying in a face of \${\textbackslash}Delta{\textasciicircum}d\$ has the same label as one of the vertices of that face, then there exists a rainbow facet (a facet whose vertices have pairwise distinct labels). For \$d{\textbackslash}leq 2\$, it is not difficult to show that for every facet \${\textbackslash}sigma\$, there exists a labelling with the above properties where \${\textbackslash}sigma\$ is the unique rainbow facet. For every \$d{\textbackslash}geq 3\$, however, we construct an infinite family of examples where this is not the case, which implies the answer to Gallai's question as a corollary. The construction is based on the properties of a \$4\$-polytope which had been used earlier to disprove a claim of T. S. Motzkin on neighbourly polytopes.},
+	number = {{arXiv}:2301.03420},
+	author = {Kaiser, Tomáš and Stehlík, Matěj and Škrekovski, Riste},
+	urldate = {2024-06-22},
+	date = {2024-04-23},
+	eprinttype = {arxiv},
+	eprint = {2301.03420 [math]},
+	file = {Kaiser et al. - 2024 - Criticality in Sperner's Lemma.pdf:/home/nils/Zotero/storage/KHVTNERD/Kaiser et al. - 2024 - Criticality in Sperner's Lemma.pdf:application/pdf},
 }
