Write section on boolean circuits

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -415,3 +415,18 @@ Version Number: 1.0},
 	eprint = {2301.03420 [math]},
 	file = {Kaiser et al. - 2024 - Criticality in Sperner's Lemma.pdf:/home/nils/Zotero/storage/KHVTNERD/Kaiser et al. - 2024 - Criticality in Sperner's Lemma.pdf:application/pdf},
 }
+
+@incollection{greenlaw_chapter_1998,
+	location = {Oxford},
+	title = {{CHAPTER} 9 - Circuit Complexity},
+	isbn = {978-1-55860-547-3},
+	url = {https://www.sciencedirect.com/science/article/pii/B9781558605473500133},
+	pages = {241--257},
+	booktitle = {Fundamentals of the Theory of Computation: Principles and Practice},
+	publisher = {Morgan Kaufmann},
+	author = {Greenlaw, Raymond and Hoover, H. James},
+	editor = {Greenlaw, Raymond and Hoover, H. James},
+	date = {1998-01-01},
+	doi = {10.1016/B978-1-55860-547-3.50013-3},
+	file = {Greenlaw and Hoover - 1998 - CHAPTER 9 - Circuit Complexity:/home/nils/Zotero/storage/4KR8L3TA/Greenlaw and Hoover - 1998 - CHAPTER 9 - Circuit Complexity:application/pdf},
+}
