Make definitions breakable

--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -53,7 +53,7 @@
 \newcommand{\EndOfLine}{\textsc{EndOfLine}}
 
 \newcommand{\binstr}{\{0, 1\}^*}
-\newcommand{\bitstrn}{\{0, 1\}^n}
+\newcommand{\bitstr}{\{0, 1\}}
 \DeclareMathOperator{\poly}{poly}
 \DeclareMathOperator{\lev}{lev}
 \DeclareMathOperator{\depth}{depth}
