--- a/math_styling/theorems.sty
+++ b/math_styling/theorems.sty
@@ -44,7 +44,7 @@
 \RequirePackage{tcolorbox} % Required for colored boxes
 
 % Definition box
-\newtcolorbox{dBox}{colback=gray!20!white,colframe=white,boxrule=0.0pt,arc=4pt,boxsep=0pt,left=6pt,right=6pt,top=6pt,bottom=6pt,tcbox raise base, sharp corners}
+\newtcolorbox{dBox}{colback=gray!20!white,colframe=white,boxrule=0.0pt,arc=4pt,boxsep=0pt,left=6pt,right=6pt,top=6pt,bottom=6pt,tcbox raise base, sharp corners, breakable}
 
 % Lemma/Claim box
 \newtcolorbox{cBox}{colback=gray!20!white,colframe=white,boxrule=0.0pt,arc=4pt,boxsep=0pt,left=6pt,right=6pt,top=6pt,bottom=6pt,tcbox raise base, sharp corners}
