Add macro to have nice quotes for principles

--- a/preamble.tex
+++ b/preamble.tex
@@ -78,6 +78,11 @@
     \import{./images/}{#1.pdf_tex}
 }
 
+%New command for principles
+\newcommand{\principle}[1]{\begin{center}
+        ``\textit{#1}''
+    \end{center}}
+
 %Settings for the justification of the text
 \tolerance=1000
 \hyphenpenalty=900
