Fix typo TFNP <-> TNFP

--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -33,7 +33,7 @@
 %Definition of complexity classes
 %Have the caracters be in Fira Sans Medium
 \renewcommand{\P}{\textbf{P}}
-\newcommand{\TFNP}{\textbf{TNFP}}
+\newcommand{\TFNP}{\textbf{TFNP}}
 \newcommand{\PLS}{\textbf{PLS}}
 \newcommand{\FNP}{\textbf{FNP}}
 \newcommand{\NP}{\textbf{NP}}
