Begin writing subsection on the Tarski Problem

--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -68,3 +68,7 @@
 
 %Whole number interval
 \newcommand{\winterval}[2]{\left\lBrack#1, #2\right\rBrack}
+
+%f Tilde
+\newcommand{\ftilde}{\widetilde{f}}
+\newcommand{\Ctilde}{\widetilde{C}}
