Add algorithm styling

--- a/math_styling/mathmacros.sty
+++ b/math_styling/mathmacros.sty
@@ -19,6 +19,10 @@
 \DeclareMathOperator{\sgnOp}{sgn}
 \newcommand{\sgn}[1]{\sgnOp\left(#1\right)}
 
+%Floor, ceil
+\newcommand{\floor}[1]{\left\lfloor#1\right\rfloor}
+\newcommand{\ceil}[1]{\left\lceil#1\right\rceil}
+
 %Definition of the norm
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 \newcommand{\abs}[1]{\left\lvert#1\right\rvert}
@@ -72,3 +76,8 @@
 %f Tilde
 \newcommand{\ftilde}{\widetilde{f}}
 \newcommand{\Ctilde}{\widetilde{C}}
+\newcommand{\Ltilde}{\widetilde{L}}
+
+%Algorithm macros
+%LET macro
+\newcommand{\Let}[2]{#1 $\gets$ #2}
