--- a/styling/kao.sty
+++ b/styling/kao.sty
@@ -1382,7 +1382,7 @@
 %verbatim \preto{\@verbatim}{\topsep=0pt \partopsep=0pt }
 
 % Algorithms
-\RequirePackage[linesnumbered, ruled, vlined]{algorithm2e} % Algorithms
+\RequirePackage[ruled, vlined]{algorithm2e} % Algorithms
 
 % Special gliphs
 \RequirePackage{ccicons} % Creative Commons icons
