Write section on Tarski inside TFNP

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -491,3 +491,24 @@
 	langid = {english},
 	file = {Submitted Version:/home/nils/Zotero/storage/WS5MMWTF/Fearnley et al. - 2022 - A Faster Algorithm for Finding Tarski Fixed Points.pdf:application/pdf},
 }
+
+@article{fearnley_complexity_2023,
+	title = {The Complexity of Gradient Descent: {CLS} = {PPAD} ∩ {PLS}},
+	volume = {70},
+	issn = {0004-5411, 1557-735X},
+	url = {https://dl.acm.org/doi/10.1145/3568163},
+	doi = {10.1145/3568163},
+	shorttitle = {The Complexity of Gradient Descent},
+	abstract = {We study search problems that can be solved by performing Gradient Descent on a bounded convex polytopal domain and show that this class is equal to the intersection of two well-known classes: {PPAD} and {PLS}. As our main underlying technical contribution, we show that computing a Karush-Kuhn-Tucker ({KKT}) point of a continuously differentiable function over the domain [0,1]
+              2
+              is {PPAD} ∩ {PLS}-complete. This is the first non-artificial problem to be shown complete for this class. Our results also imply that the class {CLS} (Continuous Local Search) – which was defined by Daskalakis and Papadimitriou as a more “natural” counterpart to {PPAD} ∩ {PLS} and contains many interesting problems – is itself equal to {PPAD} ∩ {PLS}.},
+	pages = {1--74},
+	number = {1},
+	journaltitle = {Journal of the {ACM}},
+	shortjournal = {J. {ACM}},
+	author = {Fearnley, John and Goldberg, Paul and Hollender, Alexandros and Savani, Rahul},
+	urldate = {2024-07-21},
+	date = {2023-02-28},
+	langid = {english},
+	file = {Submitted Version:/home/nils/Zotero/storage/FW2N7WLV/Fearnley et al. - 2023 - The Complexity of Gradient Descent CLS = PPAD ∩ P.pdf:application/pdf},
+}
