--- a/preamble.tex
+++ b/preamble.tex
@@ -41,11 +41,11 @@
 \usepackage{transparent}
 \usepackage{textcomp} %Textrightarrow
 \usepackage{marvosym} %Bold arrows
+\usepackage{newunicodechar} %Allows us to add missing unicode characters
 
 \input{styling/title_page.tex} %Use custom title page
 
 %Set the font to Fira Math for math symbols
-
 \setmainfont[
     Ligatures=TeX,
     % UprightFont = ,
@@ -56,6 +56,8 @@
 ]{Fira Sans Light}
 %\setsansfont[Ligatures=TeX]{Fira Sans}
 \setmonofont[Ligatures=TeX]{Fira Mono}
+%Fix missing characters
+\newunicodechar{∩}{\ensuremath{\cap}}
 
 %Use Fira Math for Equations
 % \usepackage{firamath-otf}
