Fix marginnote inside tcolorbox

--- a/math_styling/theorems.sty
+++ b/math_styling/theorems.sty
@@ -43,17 +43,20 @@
 
 \RequirePackage{tcolorbox} % Required for colored boxes
 
+\newlength{\theoremboxmargin}
+\setlength{\theoremboxmargin}{6pt}
+
 % Definition box
-\newtcolorbox{dBox}{colback=gray!20!white,colframe=white,boxrule=0.0pt,arc=4pt,boxsep=0pt,left=6pt,right=6pt,top=6pt,bottom=6pt,tcbox raise base, sharp corners, breakable}
+\newtcolorbox{dBox}{colback=gray!20!white,colframe=white,boxrule=0.0pt,arc=4pt,boxsep=0pt,left=\theoremboxmargin,right=\theoremboxmargin,top=\theoremboxmargin,bottom=\theoremboxmargin,tcbox raise base, sharp corners, breakable}
 
 % Lemma/Claim box
-\newtcolorbox{cBox}{colback=gray!20!white,colframe=white,boxrule=0.0pt,arc=4pt,boxsep=0pt,left=6pt,right=6pt,top=6pt,bottom=6pt,tcbox raise base, sharp corners, breakable}
+\newtcolorbox{cBox}{colback=gray!20!white,colframe=white,boxrule=0.0pt,arc=4pt,boxsep=0pt,left=\theoremboxmargin,right=\theoremboxmargin,top=\theoremboxmargin,bottom=\theoremboxmargin,tcbox raise base, sharp corners, breakable}
 
 % Theorem/Corollary/Proposition box
-\newtcolorbox{tBox}{colback=gray!20!white,colframe=white,boxrule=0.0pt,arc=4pt,boxsep=0pt,left=6pt,right=6pt,top=6pt,bottom=6pt,tcbox raise base, sharp corners, breakable}
+\newtcolorbox{tBox}{colback=gray!20!white,colframe=white,boxrule=0.0pt,arc=4pt,boxsep=0pt,left=\theoremboxmargin,right=\theoremboxmargin,top=\theoremboxmargin,bottom=\theoremboxmargin,tcbox raise base, sharp corners, breakable}
 
 %Problem box
-\newtcolorbox{pBox}{colback=gray!20!white,colframe=white,boxrule=0.0pt,arc=4pt,boxsep=0pt,left=6pt,right=6pt,top=6pt,bottom=6pt,tcbox raise base, sharp corners}
+\newtcolorbox{pBox}{colback=gray!20!white,colframe=white,boxrule=0.0pt,arc=4pt,boxsep=0pt,left=\theoremboxmargin,right=\theoremboxmargin,top=\theoremboxmargin,bottom=\theoremboxmargin,tcbox raise base, sharp corners}
 
 \newtcolorbox{pLine}{  breakable,
 enhanced,
