Small styling improvements

--- a/math_styling/theorems.sty
+++ b/math_styling/theorems.sty
@@ -23,7 +23,7 @@
 	{} % Punctuation after theorem head
 	{0.25em} % Space after theorem head
 	{\bfseries\thmname{#1}~\thmnumber{\@ifnotempty{#1}{}\@upn{#2}} % Theorem text (e.g. Theorem 2.1)
-	\thmnote{\bfseries---~#3.\hspace{0.25em}}\index{#3}\newline} % Optional theorem note
+	\thmnote{\bfseries---~#3.\hspace{0.25em}}\index{#3}\newline\ignorespaces} % Optional theorem note
 
 %------------------------------------------------
 
