--- a/bibliography.bib
+++ b/bibliography.bib
@@ -512,3 +512,15 @@
 	langid = {english},
 	file = {Submitted Version:/home/nils/Zotero/storage/FW2N7WLV/Fearnley et al. - 2023 - The Complexity of Gradient Descent CLS = PPAD ∩ P.pdf:application/pdf},
 }
+
+@book{arora_computational_2009,
+	location = {Cambridge},
+	title = {Computational complexity : a modern approach},
+	isbn = {1-139-23475-7},
+	abstract = {This beginning graduate textbook describes both recent achievements and classical results of computational complexity theory. Requiring essentially no background apart from mathematical maturity, the book can be used as a reference for self-study for anyone interested in complexity, including physicists, mathematicians, and other scientists, as well as a textbook for a variety of courses and seminars. More than 300 exercises are included with a selected hint set. The book starts with a broad introduction to the field and progresses to advanced results. Contents include: definition of Turing machines and basic time and space complexity classes, probabilistic algorithms, interactive proofs, cryptography, quantum computation, lower bounds for concrete computational models (decision trees, communication complexity, constant depth, algebraic and monotone circuits, proof complexity), average-case complexity and hardness amplification, derandomization and pseudorandom constructions, and the {PCP} theorem.},
+	publisher = {Cambridge University Press},
+	author = {Arora, Sanjeev and Barak, Boaz},
+	date = {2009},
+	keywords = {Computational complexity},
+	file = {Arora and Barak - 2009 - Computational complexity  a modern approach.pdf:/home/nils/Zotero/storage/QSHX6UP8/Arora and Barak - 2009 - Computational complexity  a modern approach.pdf:application/pdf},
+}
